TS-3415: H2 sending FIN stream too early